# awesome-gibson

./: .gitignore  README.md
automatic-api-sync-database-changes/sample-travel-agency-react-app/: .env.example  package-lock.json
automatic-api-sync-database-changes/sample-travel-agency-react-app/public/: index.html
automatic-api-sync-database-changes/sample-travel-agency-react-app/src/pages/: Home.tsx  ReviewsPage.tsx
automatic-api-sync-database-changes/sample-travel-agency-react-app/src/services/: api.ts
database-schema-to-pr-agent/: .gitignore  README.md  agent.py  app.py  env.example  llm_model.py  pyproject.toml
sales_contact_finder/: .env.example  README.md  buyer_contact.md  main.py  pyproject.toml
sales_contact_finder/src/: crew.py
sales_contact_finder/src/config/: tasks.yaml
sales_contact_finder/src/config.egg-info/: PKG-INFO  SOURCES.txt
sales_contact_finder/src/tools/: api_poster.py  contact_storage_tool.py
sample-travel-agency-react-app/: .gitignore  README.md  package.json  tailwind.config.js
sample-travel-agency-react-app/src/: App.tsx  index.css
sample-travel-agency-react-app/src/components/: Navbar.tsx
sample-travel-agency-react-app/src/pages/: BookingsPage.tsx  DestinationsPage.tsx  UsersPage.tsx
sample-travel-agency-react-app/src/types/: index.ts
